<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_HomePantry"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStockProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_stock_produto" />

        <Button
            android:id="@+id/btnListas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_listas" />

        <Button
            android:id="@+id/btnCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/txt_categorias" />

        <Button
            android:id="@+id/btnLocais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/txt_locais" />
    </LinearLayout>

</LinearLayout>