<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_criar_utilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_titulo_criar_utilizador"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imagem_criar_utilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:padding="24dp"
                android:scaleType="centerInside"
                android:src="@drawable/imagem_criar_utilizador" />

            <Button
                android:id="@+id/btn_carregar_foto_novo_utilizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/btn_carregar_foto"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:layout_gravity="right"/>

            <TextView
                android:id="@+id/label_nome_criar_utilizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome" />

            <EditText
                android:id="@+id/txt_nome_criar_utilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nome_utilizador"
                android:inputType="text" />

            <TextView
                android:id="@+id/label_apelido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apelido" />

            <EditText
                android:id="@+id/txt_apelido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apelido"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>