<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarNovoUtilizadorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="32dp">

            <!-- Título -->
            <TextView
                android:id="@+id/txt_criar_utilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_titulo_criar_utilizador"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <!-- Imagem utilizador -->
            <ImageView
                android:id="@+id/imagem_criar_utilizador"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:src="@drawable/logoipl"
                android:scaleType="centerInside" />


            <!-- Botão carregar foto alinhado à direita -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_carregar_foto_novo_utilizador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/btn_carregar_foto"
                    android:textAllCaps="true"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Nome -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_nome_utilizador"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/txt_nome_utilizador">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nome_utilizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Apelido -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_apelido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_apelido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_apelido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/txt_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>



</FrameLayout>