<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:paddingTop="32dp">

        <TextView
            android:id="@+id/txt_criar_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_criar_categoria"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:id="@+id/imageView_categoria"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside" />

        <Button
            android:id="@+id/btn_carregar_foto_categoria"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:paddingHorizontal="16dp"
            android:text="@string/btn_carregar_foto"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nome_categoria"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/EditText_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Categoria"
            android:layout_marginBottom="32dp"/>


        <Button
            android:id="@+id/btn_criar_categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Criar "
            android:textAllCaps="true"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>